# scratch

./: .gitignore  .gitmodules
ca-store/: README.md  diagram.graffle  dune  main.ml  store.ml  store.mli
ca-store/lib/: contents.ml  contents.mli  contents_intf.ml  diff_intf.ml  dune  hash.ml  hash_intf.ml  hdiff.ml  hdiff.mli  hdiff_intf.ml  serialiser.ml  serialiser.mli  serialiser_intf.ml  store.ml  store.mli  store_intf.ml  version.ml  version_intf.ml
ca-store/test/: dune  test.ml  test_store.ml
code-mirror/: README.md  dune  index.html  main.ml
merkle/: README.md  dune  main.ml
nix-mirage/: .gitignore  README.md  dune-workspace  flake.nix
nix-mirage/nix/: default.nix
nix-mirage/nix-overlays/ocaml/: default.nix  ocaml5.nix
nix-mirage/nix-overlays/ocaml/mirage-bootvar-solo5/: default.nix
nix-mirage/nix-overlays/overlay/: default.nix
pair-programming/: person.txt
pair-programming-2/: dune  example.json  main.ml
pair-programming/src/lib/: dune  person.ml  person.mli
proofs/: Makefile  README.md  pr1.lurk  private-to-audit.lurk  pta-function.json  pta-open-proof-pr1.json
proofs/data/: pr1.json
proofs/lurk_of_json/: dune  main.ml
retirement-system/: .gitmodules  Cargo.toml  Makefile  README.md
retirement-system/.cargo/: config.toml
retirement-system/lurk-rs/: Cargo.toml
retirement-system/lurk-rs/fcomm/: Cargo.toml
retirement-system/src/: lib.rs  vericomp.rs
retirement-system/test/: inputs.json
sched/: dune  main.ml
